fixes icon alignment

--- a/src/indigo/less/icons.less
+++ b/src/indigo/less/icons.less
@@ -179,6 +179,7 @@ table .kbc-component-icon {
   width: 32px;
   height: 32px;
   display: inline-block;
+  vertical-align: middle;
   color: #7C8498;
 }
 .icon-size-stack {
